[project]
name = "pyhlsmv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "f", email = "frend.fernando@live.com" }
]
requires-python = ">=3.14"
dependencies = [
    "daphne>=4.2.1",
    "litestar>=2.21.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
]

[project.scripts]
pyhlsmv = "pyhlsmv:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
